update read all bytes error