@@ -3,7 +3,11 @@ package com.azure.maps.render;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.util.Arrays;
 import java.util.List;
 
@@ -42,7 +46,10 @@ public class RenderClientTest extends RenderClientTestBase {
         MapTileOptions mapTileOptions = new MapTileOptions();
         mapTileOptions.setTilesetId(TilesetID.MICROSOFT_BASE_ROAD);
         mapTileOptions.setTileIndex(new TileIndex().setX(10).setY(22).setZ(6));
-        byte[] actualResult = client.getMapTile(mapTileOptions).readAllBytes();
+        InputStream is = client.getMapTile(mapTileOptions);
+        File file = new File("maptilesampleoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        byte[] actualResult = Files.readAllBytes(file.toPath());
         byte[] expectedResult = TestUtils.getExpectedMapTile();
         validateGetMapTile(actualResult, expectedResult);
     }
@@ -167,7 +174,10 @@ public class RenderClientTest extends RenderClientTestBase {
         MapStaticImageOptions mapStaticImageOptions = new MapStaticImageOptions().setStaticMapLayer(StaticMapLayer.BASIC)
         .setMapImageStyle(MapImageStyle.MAIN).setZoom(2)
         .setBoundingBox(Utility.toBoundingBox(bbox)).setRasterTileFormat(RasterTileFormat.PNG);
-        byte[] actualResult = client.getMapStaticImage(mapStaticImageOptions).readAllBytes();
+        InputStream is = client.getMapStaticImage(mapStaticImageOptions);
+        File file = new File("mapstaticimagesampleoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        byte[] actualResult = Files.readAllBytes(file.toPath());
         byte[] expectedResult = TestUtils.getExpectedMapStaticImage();
         validateGetMapStaticImage(expectedResult, actualResult);
     }
