@@ -1,7 +1,11 @@
 package com.azure.maps.render;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -28,8 +32,10 @@ public class TestUtils {
 
     static MapTileset getExpectedMapTileset() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("maptileset.json");
+        File file = new File("maptilesetoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<MapTilesetPrivate> interimType = new TypeReference<MapTilesetPrivate>(){};
         MapTilesetPrivate mapTilesetPrivate = null;
@@ -40,8 +46,10 @@ public class TestUtils {
 
     static MapAttribution getExpectedMapAttribution() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("mapattribution.json");
+        File file = new File("mapattributionoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<MapAttribution> interimType = new TypeReference<MapAttribution>(){};
         return jacksonAdapter.<MapAttribution>deserialize(data, interimType.getJavaType(),
@@ -50,8 +58,10 @@ public class TestUtils {
 
     static CopyrightCaption getExpectedCopyrightCaption() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("copyrightcaption.json");
+        File file = new File("copyrightcaptionoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<CopyrightCaption> interimType = new TypeReference<CopyrightCaption>(){};
         return jacksonAdapter.<CopyrightCaption>deserialize(data, interimType.getJavaType(),
@@ -60,8 +70,10 @@ public class TestUtils {
 
     static Copyright getExpectedCopyrightFromBoundingBox() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("getcopyrightfromboundingbox.json");
+        File file = new File("getcopyrightfromboundingboxoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<Copyright> interimType = new TypeReference<Copyright>(){};
         return jacksonAdapter.<Copyright>deserialize(data, interimType.getJavaType(),
@@ -70,8 +82,10 @@ public class TestUtils {
 
     static Copyright getExpectedCopyrightForTile() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("getcopyrightfortile.json");
+        File file = new File("getcopyrightfortileoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<Copyright> interimType = new TypeReference<Copyright>(){};
         return jacksonAdapter.<Copyright>deserialize(data, interimType.getJavaType(),
@@ -80,8 +94,10 @@ public class TestUtils {
 
     static Copyright getExpectedCopyrightForWorld() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("getcopyrightforworld.json");
+        File file = new File("getcopyrightforworldoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
         byte[] data = null;
-        data = is.readAllBytes();
+        data = Files.readAllBytes(file.toPath());
         SerializerAdapter jacksonAdapter = JacksonAdapter.createDefaultSerializerAdapter();
         TypeReference<Copyright> interimType = new TypeReference<Copyright>(){};
         return jacksonAdapter.<Copyright>deserialize(data, interimType.getJavaType(),
@@ -90,12 +106,16 @@ public class TestUtils {
 
     static byte[] getExpectedMapTile() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("maptile.png");
-        return is.readAllBytes();
+        File file = new File("maptileoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        return Files.readAllBytes(file.toPath());
     }
 
     static byte[] getExpectedMapStaticImage() throws IOException {
         InputStream is = ClassLoader.getSystemResourceAsStream("mapstaticimage.png");
-        return is.readAllBytes();
+        File file = new File("mapstaticimageoutput.txt");
+        Files.copy(is, file.toPath(), StandardCopyOption.REPLACE_EXISTING);
+        return Files.readAllBytes(file.toPath());
     }
 
     /**
